--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,20 @@
-body{
-    text-align: center;
-    color: aqua;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body {
+  text-align: center;
+  columns: #333333;
+  margin: 0;
+  font-size: 16px;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #dddddd;
+  margin: 0 auto;
+}
+
+#container h1 {
+  font-size: 20px;
 }
