--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-size: 16px;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #header {
